--- a/html/demo/table_one/index.html
+++ b/html/demo/table_one/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<div id="divBox1" style="margin:20px 50px;overflow:auto;height:520px;width:450px;float:left;"></div>
+<div id="divBox1" style="margin:20px 50px;overflow:auto;height:520px;width:422px;float:left;"></div>
 <!-- <div id="divBox2" style="margin:20px 50px;overflow:auto;height:520px;width:450px;float:left;"></div> -->
 </body>
 
@@ -21,25 +21,25 @@
 <script type="text/javascript">  
     function test(num) {
         var box = document.getElementById('divBox' + num);
-        var strHtml = '<table id="tbTest' + num + '" cellpadding="0" cellspacing="0" style="text-align:center;width:680px;">';
-        for (var i = 0; i < 1; i++) {
-            strHtml += '<tr style="background:url(title_bg.png) repeat-x;">';
-            for (var j = 0; j < 8; j++) {
-                if (j < 8 - 1) {
-                    strHtml += '<th style="width:80px;">';
-                } else {
-                    strHtml += '<th>';
-                }
-                strHtml += '第' + (i + 1) + '行第' + (j + 1) + '列';
-                strHtml += '</th>';
-            }
-            strHtml += '</tr>';
-        }
+        var strHtml = '<table id="tbTest' + num + '" cellpadding="0" cellspacing="0" style="text-align:center;width:800px;">';
+        // for (var i = 0; i < 1; i++) {
+        //     strHtml += '<tr style="background:url(title_bg.png) repeat-x;">';
+        //     for (var j = 0; j < 8; j++) {
+        //         if (j < 8 - 1) {
+        //             strHtml += '<th style="width:80px;">';
+        //         } else {
+        //             strHtml += '<th>';
+        //         }
+        //         strHtml += '第' + (i + 1) + '行第' + (j + 1) + '列';
+        //         strHtml += '</th>';
+        //     }
+        //     strHtml += '</tr>';
+        // }
         for (var i = 1; i < 30; i++) {
             strHtml += '<tr>';
             for (var j = 0; j < 8; j++) {
                 if (j < 8 - 1) {
-                    strHtml += '<td style="width:80px;">';
+                    strHtml += '<td style="width:90px;">'; 
                 } else {
                     strHtml += '<td>';
                 }
