--- a/html/demo/练习/垂直侧边栏效果/index.html
+++ b/html/demo/练习/垂直侧边栏效果/index.html
@@ -7,7 +7,7 @@
     <title>仿百度百科右侧目录特效</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="../../js/jquery-3.2.1.js"></script>
+    <script src="../../../js/jquery-3.2.1.js"></script>
     <script src="CateNav.js"></script>
 
     <style type="text/css">
