--- a/html/demo/练习/table左侧固定/index.html
+++ b/html/demo/练习/table左侧固定/index.html
@@ -12,30 +12,92 @@
     <div class="wrapper">
         <table border="1" class="tab-css">
             <thead>
-                <tr lass="tr-css" align="center">
-                    <th class="fixed" >题号</th>
-                    <th class="td-empty">&nbsp;&nbsp;</th>
+                <tr class="tr-css" align="center">
+                    <th colspan="2">题号</th>
+                    <!--<th class="td-empty" colspan="2">&nbsp;&nbsp;</th>-->
                     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>10</th><th>11</th><th>12</th><th>13</th>
                 </tr>
             </thead>
 
             <tbody>
-                <tr class="tr-css " align="center">
-                    <td class="fixed">题型</td>
-                    <td class="td-empty">&nbsp;&nbsp;</td>
+                <tr class="tr-css" align="center">
+                    <td colspan="2">题型</td>
+                    <!--<td class="td-empty">&nbsp;&nbsp;</td>-->
                     <td>主观题</td><td>主观题</td><td>客观题</td><td>主观题</td><td>主观题</td><td>主观题</td><td>客观题</td><td>主观题</td><td>主观题</td><td>主观题</td><td>主观题</td><td>主观题</td><td>主观题</td>
                 </tr>
 
-                <tr class="tr-css " align="center">
-                    <td class="fixed">满分</td>
-                    <td class="td-empty">&nbsp;&nbsp;</td>
+                <tr class="tr-css" align="center">
+                    <td colspan="2">满分</td>
+                    <!--<td class="td-empty">&nbsp;&nbsp;</td>-->
                     <td>2</td><td>4</td><td>4</td><td>4</td><td>4</td><td>6</td><td>6</td><td>6</td><td>6</td><td>6</td><td>6</td><td>8</td><td>8</td>
                 </tr>
 
-                <tr class="tr-css " align="center">
-                    <td class="fixed">满分</td>
-                    <td class="td-empty">&nbsp;&nbsp;</td>
-                    <td>2</td><td>4</td><td>4</td><td>4</td><td>4</td><td>6</td><td>6</td><td>6</td><td>6</td><td>6</td><td>6</td><td>8</td><td>8</td>
+                <tr class="tr-css" align="center">
+                    <td class="" rowspan="2">班级</td>
+                    <td>得分</td>
+                    <td>11</td>
+                    <td>22</td>
+                    <td>33</td>
+                    <td>44</td>
+                    <td>55</td>
+                    <td>66</td>
+                    <td>77</td>
+                    <td>88</td>
+                    <td>99</td>
+                    <td>100</td>
+                    <td>111</td>
+                    <td>112</td>
+                    <td>113</td>
+                </tr>
+                <tr class="tr-css" align="center">
+                    <td>对比</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>7</td>
+                    <td>8</td>
+                    <td>9</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>12</td>
+                    <td>13</td>
+                </tr>
+
+                <tr class="tr-css" align="center">
+                    <td class="" rowspan="2">班级</td>
+                    <td>得分</td>
+                    <td>11</td>
+                    <td>22</td>
+                    <td>33</td>
+                    <td>44</td>
+                    <td>55</td>
+                    <td>66</td>
+                    <td>77</td>
+                    <td>88</td>
+                    <td>99</td>
+                    <td>100</td>
+                    <td>111</td>
+                    <td>112</td>
+                    <td>113</td>
+                </tr>
+                <tr class="tr-css" align="center">
+                    <td>对比</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>7</td>
+                    <td>8</td>
+                    <td>9</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>12</td>
+                    <td>13</td>
                 </tr>
                 
                 </tbody>
